--- a/index.html
+++ b/index.html
@@ -53,11 +53,35 @@
     <div class="poem-title">풀꽃</div>
     <div>
       <p>
-        자세히 보아야<br>
-        예쁘다<br>
-        오래 보아야<br>
-        사랑스럽다<br>
-        너도 그렇다
+        다시 태어나도
+
+그대를 사랑하고 싶은 것은
+
+한 번이라도 나를 위해 울어준 사람이
+
+바로 그대였기 때문입니다.
+
+ 
+
+그대는 한 번도
+
+그대 자신을 위해 울어본 적이 없는
+
+그렇게도 강인한 사람이었지만
+
+이렇게 연약한 나를 위하여
+
+눈물을 보여주었습니다.
+
+ 
+
+다시 태어나도 
+
+그대를 사랑하고 싶은 것은
+
+이제 내가 그대를 위해
+
+울어줄 차례이기 때문입니다.
       </p>
     </div>
     <div class="poem-author">- 나태주</div>
