--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     .poem-container {
       max-width: 600px;
       margin: 40px auto;
-      background: linear-gradient(135deg, #b7eaff 0%, #ffdee9 100%);
+      background: linear-gradient(135deg, #87eaff 0%, #ffdae9 100%);
       border-radius: 20px;
       padding: 32px 20px;
       box-shadow: 0 4px 24px rgba(0,0,0,0.1);
-      color: #343a40;
+      color: #343f40;
       text-align: center;
       transition: background 0.3s;
     }
@@ -28,7 +28,7 @@
       font-size: 1.7rem;
       font-weight: bold;
       margin-bottom: 24px;
-      color: #3677eb;
+      color: #367aeb;
       letter-spacing: 0.05em;
     }
     .poem-author {
@@ -50,7 +50,7 @@
 </head>
 <body>
   <div class="poem-container">
-    <div class="poem-title">풀꽃</div>
+    <div class="poem-title">다시 태어나도 그대를 사랑하리</div>
     <div>
       <p>
         다시 태어나도
